<resources>
    <string name="app_name">TimeTravellers</string>

    <string name="google_client_id">282356621189-m9d115k639rr7g8siaapldb3l72ja88l.apps.googleusercontent.com</string>
    <string name="google_web_client_id">282356621189-sd2i4jman7d8hpqvn2rqjq38rfsnukee.apps.googleusercontent.com</string>
    <string name="google_web_client_secret">18FWZ-cp81ZPpPsMdVzqrSt8</string>
    <string name="facebook_app_id">692595817867486</string>
    <string name="fb_login_protocol_scheme">fb692595817867486</string>
    <string name="pusher_api_key">b48af87a9c4558f9e809</string>

    <string name="modal_login_on_cancel">Неуспешно влизане</string>
    <string name="modal_internet_error_title">Грешка при свързването</string>
    <string name="modal_internet_error_description">Неуспешно свързване. Проверете интернет връзката си.</string>
    <string name="modal_login_auth_error">Грешка при автентикацията</string>
    <string name="modal_login_error_fb">Facebook грешка</string>
    <string name="modal_login_error_google">Google грешка</string>
    <string name="modal_server_error_title">Неуспешно свързване със сървъра</string>
    <string name="modal_server_error_description">Повторен опит за влизане</string>
    <string name="settings_mute">Музика</string>
    <string name="settings_language">Език</string>
    <string name="settings_language_bg">Български</string>
    <string name="settings_language_en">Английски</string>
    <string name="description">Описание</string>
    <string name="button_start_game">Начало на играта</string>
    <string name="title_settings">Настройки</string>
    <string name="button_logout">Изход</string>
    <string name="title_rank_list">Класация</string>
    <string name="title_all_games_list">Моите игри</string>
    <string name="error_taking_ranking_list">Грешка при взимане на класацията</string>
    <string name="error_taking_player_list">Грешка при взимане на списъка с играчите</string>
    <string name="error_taking_all_games">Грешка при взимане на всички игри</string>
    <string name="error_taking_all_players">Грешка при взимане на всички играчи</string>
    <string name="error_sync_locations">Грешка при синхронизацията на локация</string>
    <string name="error_sync_ranking">Грешка при синхронизация за класация</string>
    <string name="error_sync_all_games">Грешка при синхронизация за всички игри</string>
    <string name="notification_near_location_title">Започни своята игра сега!</string>
    <string name="notification_near_location_description">Близо си до Time Traveller локация, където може да научиш нещо ново. Намери си екип или играй сам. Ела да преживеш нещо ново и незабравимо</string>
    <string name="notification_near_location_text">Близо си до Time Traveller локация</string>
    <string name="title_play_mode">Начин на игра</string>
    <string name="title_single_player">Самостоятелна игра</string>
    <string name="title_team_play">Игра в отбор</string>
    <string name="title_game_ready">Играта е готова</string>
    <string name="modal_mode_are_you_ready">Готов/а ли си?</string>
    <string name="modal_mode_button_start_game">Започни игра</string>
    <string name="modal_mode_choose_option">Избери опция</string>
    <string name="modal_mode_button_team_create">Създай отбор</string>
    <string name="modal_mode_button_create">Създай</string>
    <string name="modal_mode_button_cancel">Прекрати</string>
    <string name="modal_mode_button_join_team">Влез в отбор</string>
    <string name="title_teammates">Съотборници</string>
    <string name="are_you_sure">Сигурен/а ли си, че искаш да се откажеш?</string>
    <string name="answer_yes">Да</string>
    <string name="answer_no">Не</string>
    <string name="error_team_name_empty">Грешка - празно име. Моля въведеи име</string>
    <string name="error_parsin_data">Error parsing data</string>
    <string name="modal_enter_team_name">Въведи име</string>
    <string name="button_refresh_list">Обнови листа</string>
    <string name="button_camera">Сканирай QR код</string>
    <string name="waiting_to_start_game">Изчакване лидера на отбора да стартира играта &#8230;</string>
    <string name="error_going_back">Не може да се върнеш назад.</string>
    <string name="error_creating_team">Грешка при създаване на отбора. Опитай пак</string>
    <string name="error_failed_send_location_to_server">Неуспешно изпращане на локацията към сървъра</string>
    <string name="error_staring_game">Неуспешно стартиране на играта</string>
    <string name="title_qrmarkers">Маркери (%d от %d)</string>
    <string name="button_cancel">Прекрати</string>
    <string name="cant_read_info_twice">Този код е вече сканиран!</string>
    <string name="invalid_scan">Невалиден код!</string>0
    <string name="button_ok">OK</string>
    <string name="title_end_game">Информация за играта</string>
    <string name="button_start_test">Започни теста.</string>
    <string name="error_taking_marker_list">Грешка при взимането на всички намерени маркери</string>
    <string name="error_cannot_update_latest_marker_info">Неуспешно опресняване на информацията за намерените маркери</string>
    <string name="error_allow_camera_permission">Трябва да разрешите камерата, за да сканирате QR код</string>
    <string name="notification_found_marker">Намерен: %s</string>
    <string name="notification_found_marker_user">%s намери %s! Давай! Намери останалите маркери.</string>
    <string name="label_time_playing">Играно време</string>
    <string name="label_you_found">Ти намери</string>
    <string name="label_places">места</string>
    <string name="error_cannot_update_info">Неуспешно опресняване на информацията за играта</string>
    <string name="title_quiz">Тест</string>
    <string name="error_cannot_retrieve_questions">Грешка при показване на въпросите</string>
    <string name="are_you_ready">Готов/а ли си?</string>
    <string name="are_you_sure_no_more">Този прозорез няма да се покаже повече!</string>
    <string name="error_cannot_send_answers">Неуспешно изпращане на отговорите към сървъра</string>
    <string name="are_you_sure_closing_modal">Сигурен/а ли си, че искаш да го затвориш?</string>
    <string name="title_end">Край</string>
    <string name="label_found_markers">Намерени локации</string>
    <string name="label_true_answers">Верни отговори</string>
    <string name="btn_to_home">Към началото</string>
    <string name="btn_quiz_ready">Готово</string>

</resources>
