<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/history_background"
    tools:context=".WaitingTeammatesActivity">

    <Button
        android:id="@+id/buttonStartTeamGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_gray_default"
        android:text="@string/modal_mode_button_start_game"
        android:textColor="#000"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/layoutTitleWaitingTeammates"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/old_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTitleSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/history_lowercase"
            android:gravity="center"
            android:text="@string/title_teammates"
            android:textAlignment="center"
            android:textSize="40sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutWaitingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ProgressBar
            android:id="@+id/progressBar_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:minWidth="50dp"
            android:minHeight="50dp" />

        <TextView
            android:id="@+id/textViewWaiting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/progressBar_cyclic"
            android:text="@string/waiting_to_start_game"
            android:textColor="#FFFFFF"
            android:textSize="23sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewTitleNewTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTitleWaitingTeammates"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/history_lowercase"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/layoutSwipePlayers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/relativeLayoutWaitingText"
        android:layout_below="@id/textViewTitleNewTeamName"
        android:layout_marginEnd="0dp">

        <ListView
            android:id="@+id/listViewTeammates"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>